# whisper-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  entrypoint.sh  healthcheck.py  pyproject.toml  requirements.txt
docs/: GROQ_MIGRATION.md
scripts/: start.sh  stop.sh
src/whisper_bot/: __init__.py  bot.py  config.py  groq_limits.py  groq_transcribe.py  llm_postprocess.py
